# sitetack

./: 20220815_sequence_based_models.ipynb  Dockerfile  LICENSE  README.md  cnn.h5  docker-compose.yml  pyproject.toml  scratch.py
.github/workflows/: black.yml  deploy.yml  main.yml  mypy.yml  pyright.yml  ruff.yml
datasets/: README.md
models/trained_models/: README.md
sitetack/: alphabet.py  fasta.py  kmer.py  predict.py  sequence.py
sitetack/app/: alphabet.py  enums.py  fasta.py  kmer.py  main.py  model.py  model_config.py  predict.py  ptm_kind.py  sequence.py
sitetack/frontend/: index.html  script.js  style.css
sitetack/models/: __init__.py  cnn.h5  master_info.xlsx
test/: README.md
test/MusiteDeep/: README.md  Test_kmers_no_labels_Hydroxylation_K_Humans.csv  Test_kmers_no_labels_Hydroxylation_P_Humans.csv  Test_kmers_no_labels_Methylation_K_Humans.csv  Test_kmers_no_labels_Methylation_R_Humans.csv  Test_kmers_no_labels_N-glycosylation_N_Humans.csv  Test_kmers_no_labels_N6-acetylation_K_Humans.csv  Test_kmers_no_labels_O-glycosylation_ST_Humans.csv  Test_kmers_no_labels_Phosphorylation_ST_Humans.csv  Test_kmers_no_labels_Phosphorylation_Y_Humans.csv  (+17 more)
tests/: test_alphabet.py  test_fasta.py  test_kmer.py  test_predict.py  test_sequence.py
train/: Amino_acid_alphabets.xlsx  Analyze_model_results.ipynb  Construct_datasets_train_models.ipynb  Generating_fastas.ipynb  Predict_on_sequence.ipynb  README.md  Remove_duplicates_clean.ipynb  cd-hit_removal_of_homologous.ipynb  package_requirements  sitetack_conda_env.yml
train/LMNglyPRED/: README.md  (+4 more)
(+110 files in other folders)
