[tool.poetry]
name = "sitetack"
version = "0.1.0"
description = ""
authors = ["Benjamin Gutierrez <mrbengutierrez@gmail.com>", "Clair Gutierrez <cstg@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.9.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:flatbuffers.*",
]
