[tool.poetry]
name = "sitetack"
version = "0.1.1"
description = ""
authors = ["Benjamin Gutierrez <mrbengutierrez@gmail.com>", "Clair Gutierrez <cstg@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow-io-gcs-filesystem = "0.27.0"
protobuf = "3.20.0"
tensorflow = "2.6.0"
keras = "2.6"
fastapi = "0.9"
uvicorn = "0.22"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.3"
pyright = "^1.1.335"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:flatbuffers.*",
    "ignore::DeprecationWarning:tensorflow.*",
]

